# twizy

./: .gitignore  CMakeLists.txt  README.md  Startup instructions (physical).docx  distances.txt  gps_trash.txt  mapping_550m_again2.txt  mapping_550m_again3.txt  mapping_6m.txt  mapping_6m_again.txt  mapping_6m_again2.txt  mapping_6m_again3.txt  mapping_ons3.txt  mapping_ons4.txt  mapping_ons5.txt  mapping_ons6.txt  package.xml  res_test.txt
msg/: car_control.msg  path_generator.msg
scripts/: .CANComunication.cpp.swo  .control_listener.cpp.swp  .gps_calc3.py.swp  .gps_save.py.swp  .pure_pursuit.py.swp  CANComunication.cpp  CANComunication.h  EmergencyBrake.py  GPS_left.cpp  GPS_right.cpp  control_listener.cpp  control_simple.cpp  em_test.txt  em_test_three.txt  em_test_two.txt  emergency_brake.py  erik1.txt  fulltestcomplete5.txt  fulltestlocalisation.txt  fulltestlocalisation_four.txt  fulltestlocalisation_three.txt  fulltestlocalisation_two.txt  gps_calc.py  gps_calc2.py  gps_calc3.py  gps_calc3.py.save  gps_raw_left.txt  gps_save.py  gps_save.py.save  gps_save.py.save.1  h  h.txt  he.txt  hej.txt  main.py  map_saver.py  mapping.py  mapping5m_three.txt  mapping6magainlast.txt  mapping_550m_again1.txt  (+61 more)
scripts/ROS_and_HCSR04/: -home-sam-catkin_ws-src-twizy-scripts-.txt  ROS_and_HCSR04.ino
scripts/src/: path_planner.py  pure_pursuit.py
